--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="pricing.css" rel="stylesheet">
   <script src="assets/dist/js/bootstrap.bundle.min.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -93,15 +94,8 @@
         d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z" />
     </symbol>
   </svg>
-  <nav class="navbar border-bottom ">
-    <div class="container-fluid py-3">
-      <a class="px-5" href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
-        <img class="netflixlogo"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158"
-          alt="logo">
-      </a>
-      <a class="px-5 link-body-emphasis text-decoration-none" href="#">Sign In</a>
-    </div>
+  <nav id="navigator" class="navbar border-bottom ">
+   
   </nav>
   <div class="container py-3">
     <header>
