--- a/index.html
+++ b/index.html
@@ -95,70 +95,74 @@
     </symbol>
   </svg>
   <nav id="navigator" class="navbar border-bottom ">
-   
+
   </nav>
   <div class="container py-3">
     <header id="seccion1">
-      
+
     </header>
     <main>
       <div id="cards" class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-        
       </div>
 
-      <h2 class="display-6 text-center mb-4">Compare plans</h2>
+      <div id="prices">
+        <h2 class="display-6 text-center mb-4">Compare plans</h2>
 
-      <div class="table-responsive">
-        <table class="table text-center">
-          <thead>
-            <tr>
-              <th style="width: 34%;"></th>
-              <th style="width: 22%;">Basic</th>
-              <th style="width: 22%;">Standart</th>
-              <th class="text-danger" style="width: 22%;">Premium</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row" class="text-start">Monthly price</th>
-              <td>$6.99</td>
-              <td>$15.49</td>
-              <td class="text-danger">$19.99</td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Video quality</th>
-              <td>Good</td>
-              <td>Better</td>
-              <td class="text-danger">Best</td>
-            </tr>
-          </tbody>
+        <div class="table-responsive">
+          <table class="table text-center">
+            <thead>
+              <tr>
+                <th style="width: 34%;"></th>
+                <th style="width: 22%;">Basic</th>
+                <th style="width: 22%;">Standart</th>
+                <th class="text-danger" style="width: 22%;">Premium</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row" class="text-start">Monthly price</th>
+                <td>$6.99</td>
+                <td>$15.49</td>
+                <td class="text-danger">$19.99</td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Video quality</th>
+                <td>Good</td>
+                <td>Better</td>
+                <td class="text-danger">Best</td>
+              </tr>
+            </tbody>
 
-          <tbody>
-            <tr>
-              <th scope="row" class="text-start">Resolution</th>
-              <td>720p</td>
-              <td>1080p</td>
-              <td class="text-danger">4K+HDR</td>
-            </tr>
-            <tr>
-              <th scope="row" class="text-start">Watch on your TV, computer, mobile phone and tablet</th>
-              <td><svg class="bi text-center" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-              <td><svg class="bi text-danger" width="24" height="24">
-                  <use xlink:href="#check" />
-                </svg></td>
-            </tr>
-          </tbody>
-        </table>
-        <p class="fs-6">HD (720p), Full HD (1080p), Ultra HD (4K) and HDR availability subject to your internet service and device capabilities. Not all content is available in all resolutions. See our <a href="https://help.netflix.com/legal/termsofuse">Terms of Use</a> for more details.
-          Only people who live with you may use your account. Watch on 4 different devices at the same time with Premium, 2 with Standard and 1 with Basic.</p>
+            <tbody>
+              <tr>
+                <th scope="row" class="text-start">Resolution</th>
+                <td>720p</td>
+                <td>1080p</td>
+                <td class="text-danger">4K+HDR</td>
+              </tr>
+              <tr>
+                <th scope="row" class="text-start">Watch on your TV, computer, mobile phone and tablet</th>
+                <td><svg class="bi text-center" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+                <td><svg class="bi text-danger" width="24" height="24">
+                    <use xlink:href="#check" />
+                  </svg></td>
+              </tr>
+            </tbody>
+          </table>
+          <p class="fs-6">HD (720p), Full HD (1080p), Ultra HD (4K) and HDR availability subject to your internet
+            service and device capabilities. Not all content is available in all resolutions. See our <a
+              href="https://help.netflix.com/legal/termsofuse">Terms of Use</a> for more details.
+            Only people who live with you may use your account. Watch on 4 different devices at the same time with
+            Premium, 2 with Standard and 1 with Basic.</p>
           <div class="d-grid gap-2 col-6 mx-auto">
             <button class="btn btn-danger py-3 fs-4" type="button">Next</button>
           </div>
+        </div>
       </div>
     </main>
   </div>
@@ -166,8 +170,10 @@
     <p>Questions? Call 01 800 917 1563</p>
     <div class="d-flex flex-wrap ps-0 gap-3">
       <ul class="ps-0">
-        <p><a class="text-decoration-none text-dark" href="#">FAQ<ap></ap></p>
-        <p><a class="text-decoration-none text-dark" href="#">Privacy<ap></ap></p>
+        <p><a class="text-decoration-none text-dark" href="#">FAQ<ap></ap>
+        </p>
+        <p><a class="text-decoration-none text-dark" href="#">Privacy<ap></ap>
+        </p>
       </ul>
       <ul>
         <p><a class="text-decoration-none text-dark" href="#">Help Center</a></p>
@@ -181,4 +187,5 @@
     </div>
   </footer>
 </body>
+
 </html>
