Terminacion de footer-Json-Apis

--- a/index.html
+++ b/index.html
@@ -110,25 +110,8 @@
       </div>
     </main>
   </div>
-  <footer class="pt-4 my-md-5 pt-md-5 px-5 border-top">
-    <p>Questions? Call 01 800 917 1563</p>
-    <div class="d-flex flex-wrap ps-0 gap-3">
-      <ul class="ps-0">
-        <p><a class="text-decoration-none text-dark" href="#">FAQ<ap></ap>
-        </p>
-        <p><a class="text-decoration-none text-dark" href="#">Privacy<ap></ap>
-        </p>
-      </ul>
-      <ul>
-        <p><a class="text-decoration-none text-dark" href="#">Help Center</a></p>
-        <p><a class="text-decoration-none text-dark" href="#">Cookie Preferences</a></p>
-      </ul>
-      <ul>
-        <p><a class="text-decoration-none text-dark" href="#">Netflix Shop</a></p>
-        <p><a class="text-decoration-none text-dark" href="#">Corporate Information</a></p>
-      </ul>
-      <p><a class="text-decoration-none text-dark" href="#">Terms of Use</a></p>
-    </div>
+  <footer id="footer" class="pt-4 my-md-5 pt-md-5 px-5 border-top">
+    
   </footer>
 </body>
 
